--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
             <div class="col-md-6 col-lg-4 mb-4">
               <div class="feature-v1" data-aos="fade-up" data-aos-delay="100">
                 <div class="wrap-icon mb-3">
-                  <img src="images/svg/006-goal.svg" alt="Image" width="45">
+                  <img src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Image" width="45">
                 </div>
-                <h3>WordPress <br> Solutions</h3>
+                <h3>GIT<br> TOOL</h3>
                 <p> </p>
               </div> 
             </div>
