--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                 <div class="wrap-icon mb-3">
                   <img src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="" width="45">
                 </div>
-                <h3>GIT<br> TOOLS</h3>
+                <h3>WORDPRESS<br>SOLUTIONS </h3>
                 <p> </p>
               </div> 
             </div>
