--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="css/vendor/aos.css">
     <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="css/vendor/jquery.fancybox.min.css">
-    
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
 
     <!-- Theme Style -->
     <link rel="stylesheet" href="css/style.css">
@@ -187,7 +188,8 @@
             <div class="col-md-6 col-lg-4 mb-4">
               <div class="feature-v1" data-aos="fade-up" data-aos-delay="100">
                 <div class="wrap-icon mb-3">
-                  <img src="images/svg/006-goal.svg" alt="" width="45">
+                  <imc src="images/svg/006-goal.svg" alt="" width="45">
+                  <i class="fa fa-github" aria-hidden="true"></i>
                 </div>
                 <h3>Wordpress<br>Solutions </h3>
                 <p> </p>
