--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                   <imc src="images/svg/006-goal.svg" alt="" width="45">
                   <i class="fa fa-github" aria-hidden="true"></i>
                 </div>
-                <h3>Wordpress<br>Solutions </h3>
+                <h3>Wordpress<br>Solutions 123</h3>
                 <p> </p>
               </div> 
             </div>
