--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
             <div class="col-md-6 col-lg-4 mb-4">
               <div class="feature-v1" data-aos="fade-up" data-aos-delay="100">
                 <div class="wrap-icon mb-3">
-                  <imc src="images/svg/006-goal.svg" alt="" width="45">
-                  <i class="fa fa-github" aria-hidden="true"></i>
+                  <img src="images/svg/006-goal.svg" alt="" width="45">
+                  
                 </div>
-                <h3>Wordpress<br>Solutions 123</h3>
+                <h3>Wordpress<br>Solutions </h3>
                 <p> </p>
               </div> 
             </div>
