--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             <div class="col-md-6">
               <form method="post" class="form-outline-style-v1" id="contactForm">
                 <div class="form-group row mb-0">
-
+                  <?php require 'send-email.php';?>
                   <div class="col-lg-6 form-group gsap-reveal">
                     <label for="name">Name</label>
                     <input name="name" type="text" class="form-control" id="name">
