--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
           <div class="row justify-content-between">
             
             <div class="col-md-6">
-              <form method="post" action="send-email.php">  class="form-outline-style-v1" id="contactForm">
+              <form method="post" action="send-email.php"  class="form-outline-style-v1" id="contactForm">
                 <div class="form-group row mb-0">
                   <?php require 'send-email.php';?>
                   <div class="col-lg-6 form-group gsap-reveal">
