--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
           <div class="row justify-content-between">
             
             <div class="col-md-6">
-              <form method="post"  <form method="post" action="<?php echo $_SERVER["PHP_SELF"];?>"
+              <form method="post"  <form method="post" action="<?php echo $_SERVER["PHP_SELF"];?>
   class="form-outline-style-v1" id="contactForm">
                 <div class="form-group row mb-0">
                   <?php require 'send-email.php';?>
