--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
           <div class="row justify-content-between">
             
             <div class="col-md-6">
-             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScYO9fOXCeHeTndScm5ZoC_aEf_BeiSTqogsZdF1_mBsvp55w/viewform?embedded=true" width="640" height="645" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScYO9fOXCeHeTndScm5ZoC_aEf_BeiSTqogsZdF1_mBsvp55w/viewform?embedded=true" width="100%" height="645" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
             </div>
 
