--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="icon" img src="images/about_me_pic2.jpg" type="image/gif" sizes="16x16">
+    <link rel="icon" <img src="images/about_me_pic2.jpg"> type="image/gif" sizes="16x16">
     <title>ARSHAL </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
