--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       </div>
       <!-- END .cover-v1 -->
 
-
+<iframe height="700" width="100%" allowfullscreen="true" style="border:none;width: 100% !important;position: static;display: block !important;margin: 0 !important;"  name="3d58225956f29af475add9180c1085e6d7957710215d10b861c23948a74b70e0" src="https://amuselabs.com/pmm/crossword?id=5c2150a4&set=3d58225956f29af475add9180c1085e6d7957710215d10b861c23948a74b70e0&embed=1&compact=1&maxCols=2"></iframe>
      
 
 
