--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
           </div>
 
 
-          div class="row justify-content-between">
+          <div class="row justify-content-between">
             
             <div class="col-md-6">
               <form  action="https://formspree.io/mrgyoooz" method="POST" class="form-outline-style-v1" id="contactForm">
@@ -285,7 +285,7 @@
                   </div>
                   <div class="col-lg-6 form-group gsap-reveal">
                     <label for="email">Email</label>
-                    <input name="email" type="email" class="form-control" id="email">
+                    <input name="replyto" type="email" class="form-control" id="email">
                   </div>
                   <div class="col-lg-12 form-group gsap-reveal">
                     <label for="message">Write your message...</label>
@@ -294,16 +294,12 @@
                 </div>
                 <div class="form-group row gsap-reveal">
                     <div class="col-md-12 d-flex align-items-center">
-                      <input type="submit" class="btn btn-outline-pill btn-custom-light mr-3" value="Send Message">
+                      <input type="submit" class="btn btn-outline-pill btn-custom-light mr-3" value="Send">
                       <span class="submitting"></span>
                     </div>
                   </div>
               </form>
-              <div id="form-message-warning" class="mt-4"></div> 
-              <div id="form-message-success">
-                Your message was sent, thank you!
-              </div>
-
+              
             </div>
 
             <div class="col-md-4">
