--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 success:function (response){
                     alert("Form submitted successfully")
                     window.location.reload()
-                    //window.location.href="https://google.com"
+                    window.location.href="https://arshaljo24.github.io/myp/"
                 },
                 error:function (err){
                     alert("Something Error")
