--- a/index.html
+++ b/index.html
@@ -281,15 +281,15 @@
 
                   <div class="col-lg-6 form-group gsap-reveal">
                     <label for="name">Name</label>
-                    <input name="entry.589339435" type="text" class="form-control" id="name">
+                    <input name="NAME" type="text" class="form-control" id="name">
                   </div>
                   <div class="col-lg-6 form-group gsap-reveal">
                     <label for="email">Email</label>
-                    <input name="entry.1165375877" type="email" class="form-control" id="email">
+                    <input name="EMAIL" type="email" class="form-control" id="email">
                   </div>
                   <div class="col-lg-12 form-group gsap-reveal">
                     <label for="message">Write your message...</label>
-                    <textarea name="entry.1878899072" id="message" cols="30" rows="7" class="form-control"></textarea>
+                    <textarea name="MESSAGE" id="message" cols="30" rows="7" class="form-control"></textarea>
                   </div>
                 </div>
                 <div class="form-group row gsap-reveal">
