--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 data:$("#submit-form").serialize(),
                 method:"post",
                 success:function (response){
-                    alert("Feedback submitted successfully.Reach you soon😊")
+                    alert("Thank you for getting in touch! Have a great day ahead! Reach you soon😊")
                     window.location.reload()
                     window.location.href="https://arshaljo24.github.io/myp/"
                 },
