--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>ARSHAL </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+<link rel="icon" href="images/circle-cropped.png" type="image/gif" sizes="16x16">
+circle-cropped.png 
     <meta name="description" content="">
     <meta name="keywords" content="html, css, javascript, jquery">
     <meta name="author" content="">
