--- a/index.html
+++ b/index.html
@@ -320,6 +320,12 @@
         })
     </script>
             </div>
+            <div class="row mt-5 justify-content-between">
+            <div class="col-lg-7 mb-5 mb-lg-0">
+              <figure class="dotted-bg gsap-reveal-img ">
+                <img src="images/imageonline-co-blackandwhiteimage.png" alt="Image" class="img-fluid">
+              </figure>
+            </div>
 
             <div class="col-md-4">
               <div class="contact-info-v1">
