--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <p> </p>
               </div> 
             </div>
-            <div class="col-md-6 col-lg-4 mb-4">
+            <!--<div class="col-md-6 col-lg-4 mb-4">
               <div class="feature-v1" data-aos="fade-up" data-aos-delay="200">
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/005-line-chart.svg" alt="Image" width="45">
@@ -205,7 +205,7 @@
                 <h3>Mobile <br> Applications</h3>
                 <p></p>
               </div> 
-            </div>
+            </div>-->
 
           </div>
         </div>
@@ -355,9 +355,9 @@
               <ul class="footer-site-social">
                 <li><a href="https://www.facebook.com/arshal.jo.1">Facebook</a></li>
                 <li><a href="https://twitter.com/ArshalJo">Twitter</a></li>
-                <li><a href="https://www.instagram.com/error_viper_/">Instagram</a></li>
+                <li><a href="https://www.instagram.com/arshal.jo/">Instagram</a></li>
                 <li><a href="https://in.pinterest.com/arshaljo/">Pinterest</a></li>
-                <li><a href="https://api.whatsapp.com/send?phone=918547544604">Whatsapp</a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=918590414704">Whatsapp</a></li>
               </ul>
 
               <p class="site-copyright">
