--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <p> </p>
               </div> 
             </div>
-            <!--<div class="col-md-6 col-lg-4 mb-4">
+            <div class="col-md-6 col-lg-4 mb-4">
               <div class="feature-v1" data-aos="fade-up" data-aos-delay="200">
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/005-line-chart.svg" alt="Image" width="45">
@@ -205,7 +205,7 @@
                 <h3>Mobile <br> Applications</h3>
                 <p></p>
               </div> 
-            </div>-->
+            </div>
 
           </div>
         </div>
