--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     window.location.href="https://arshaljo24.github.io/myp/"
                 },
                 error:function (err){
-                    alert("Something Error")
+                    alert("Connecting to ADMIN..........Connection fail,Try again.")
     
                 }
             })
