--- a/index.html
+++ b/index.html
@@ -133,9 +133,12 @@
             </div>
             <div class="col-lg-4 pr-lg-5">
               <h3 class="mb-4 heading-h3"><span class="gsap-reveal">We can make it together</span></h3>
-              <p class="lead gsap-reveal">I’m a web designer and front-end web developer.As a web designer, I specialize in creating custom web sites for small businesses .</p>
-              <p class="mb-4 gsap-reveal">I am new in the web designing field but I am ready to make any kind of website .I can make any kind of website as per your choice . I am ready to design web site for businesses, for school, for trading etc . I will create attractive, responsive web page fast. </p>
-              
+              <p class="lead gsap-reveal">Welcome to my website! My name is [Your Name], and I am a 3rd Year BTech student specializing in Computer Science and Engineering with a focus on Artificial Intelligence and Machine Learning. I am currently pursuing my degree at CHRIST (Deemed to be) University.</p>
+              <p class="lead gsap-reveal">Throughout my academic journey, I have been actively involved in internships with CHRIST Consulting & IIIC, which have provided me with valuable real-world experience. These internships have allowed me to apply the knowledge and skills I have gained in my coursework to practical projects and challenges.</p>
+              <p class="lead gsap-reveal">In addition to my academic pursuits, I have also dedicated time to enhance my skills and expertise. I have earned numerous badges and certificates, which serve as a testament to my commitment to continuous learning and improvement. These achievements have contributed to my overall quality and competency in the field.</p>
+              <p class="lead gsap-reveal">Furthermore, I am a passionate freelancer, specializing in web designing, web development, and graphic designing. I have worked on various projects, collaborating with clients to bring their visions to life. My proficiency in these areas allows me to create visually appealing and functional websites that meet the unique needs of each client.</p>
+              <p class="lead gsap-reveal">I believe in the power of technology and its ability to transform the world. As an aspiring professional in the field of Artificial Intelligence and Machine Learning, I am driven to contribute to the development of innovative solutions that can positively impact society. With a strong foundation in computer science and a keen interest in AI and ML, I am constantly seeking opportunities to expand my knowledge and apply it to practical applications.</p>
+              <p class="lead gsap-reveal">Thank you for visiting my website, and I hope you find it informative. If you have any inquiries or would like to discuss potential collaborations, please feel free to reach out to me. I look forward to connecting with you!</p>  
             </div>
           </div>
         </div>
@@ -329,7 +332,7 @@
                 </div>
                 <div class="gsap-reveal d-block">
                   <span class="d-block contact-info-label">Phone</span>
-                  <a href="tel:+919447687604">+919447687604</a>
+                  <a href="tel:+919188424604">+919188424604</a>
                 </div>
                 <div class="gsap-reveal d-block">
                   <span class="d-block contact-info-label">Address</span>
